test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_procedure_local_type_decl.draco
proc main() void : type loc = *int; a := 0; corp;

