test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_missing_param_names_proctype.draco
proc (int) void p;

proc main() void : a := 0; corp;
